fixed an issue causing redgifs iframe to overflow

--- a/src/components/PostPage/PostMedia/index.scss
+++ b/src/components/PostPage/PostMedia/index.scss
@@ -1,4 +1,16 @@
-::ng-deep iframe {
-    height: 40vh;
-    width: 100% !important;
+.media-container {
+    position: relative;
+    width: 100%; /* or any specific width you need */
+    padding-bottom: 56.25%; /* This is for a 16:9 aspect ratio, change as needed */
+    height: 0;
+    overflow: hidden;
+}
+
+.media-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
